fix skill attr spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -374,7 +374,7 @@ ul li{
 
 	.skill-description{
 		font-size:1.5rem;
-		width:42rem;
+		width:38rem;
 		font-weight:200;
 
 	}
